Upgraded to newer reactor version